--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
     width: auto;
     height: auto;
     border: 0px;
-    background-color: #FFF;
+    background-color: #000;
     font-size: 0px;
 }
 
